--- a/spotify-wrapper/package.json
+++ b/spotify-wrapper/package.json
@@ -15,5 +15,8 @@
     "@babel/preset-env": "^7.22.10",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
