--- a/spotify-wrapper/package.json
+++ b/spotify-wrapper/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.11",
+    "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.22.10",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.3"
