--- a/spotify-wrapper/package.json
+++ b/spotify-wrapper/package.json
@@ -4,6 +4,9 @@
   "description": "spotify-wrapper api",
   "main": "src/index.js",
   "scripts": {
+    "clean": "rimraf dist",
+    "build": "npm run clean && babel src --out-dir dist",
+    "build:watch": "npm run clean && babel src --out-dir dist --watch",
     "test": "jest",
     "test:tdd": "jest --watchAll",
     "test:coverage": "jest --coverage"
@@ -11,9 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
     "@babel/core": "^7.22.11",
     "@babel/node": "^7.22.19",
-    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-env": "^7.23.3",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.3"
   },
