--- a/spotify-wrapper/package.json
+++ b/spotify-wrapper/package.json
@@ -7,6 +7,8 @@
     "clean": "rimraf dist",
     "build": "npm run clean && babel src --out-dir dist",
     "build:watch": "npm run clean && babel src --out-dir dist --watch",
+    "build:umd": "npx webpack --output-filename spotify-wrapper.umd.js",
+    "build:all": "npm run build && npm run build:umd",
     "test": "jest",
     "test:tdd": "jest --watchAll",
     "test:coverage": "jest --coverage"
@@ -19,7 +21,10 @@
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.3",
     "babel-jest": "^29.6.4",
-    "jest": "^29.6.3"
+    "babel-loader": "^9.1.3",
+    "jest": "^29.6.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
