--- a/spotify-wrapper/package.json
+++ b/spotify-wrapper/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.3",
     "jest": "^29.6.3",
+    "rimraf": "^5.0.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
