--- a/spotify-wrapper/package.json
+++ b/spotify-wrapper/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "build": "npm run clean && babel src --out-dir dist",
     "build:watch": "npm run clean && babel src --out-dir dist --watch",
-    "build:umd": "npx webpack --output-filename spotify-wrapper.umd.js",
+    "build:umd": "npm run clean && npx webpack --output-filename spotify-wrapper.umd.js",
     "build:all": "npm run build && npm run build:umd",
     "test": "jest",
     "test:tdd": "jest --watchAll",
@@ -27,7 +27,5 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
-  "dependencies": {
-    "dotenv": "^16.3.1"
-  }
+  "dependencies": {}
 }
