--- a/spotify-web/package.json
+++ b/spotify-web/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development"
+    "dev": "webpack-dev-server --mode=development",
+    "test": "jest --watchAll"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
