--- a/spotify-web/package.json
+++ b/spotify-web/package.json
@@ -13,6 +13,8 @@
     "@babel/preset-env": "^7.23.6",
     "babel-loader": "^9.1.3",
     "jest": "^29.7.0",
+    "jsdom": "^23.0.1",
+    "jsdom-global": "^3.0.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
